Add existing website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Million Dollar Foot Massage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="../../assets/js/html5shiv.js"></script>
+      <script src="../../assets/js/respond.min.js"></script>
+    <![endif]-->
+    <style>
+      .container {
+        max-width: 730px;
+      }
+
+      .jumbotron {
+        text-align: center;
+        border-bottom: 1px solid #e5e5e5;
+      }
+
+      .footer {
+        padding-top: 19px;
+        color: #777;
+        border-top: 1px solid #e5e5e5;
+      }
+
+      .cntr {
+        text-align: center;
+      }
+
+      #maincopy {
+        padding-bottom: 19px;
+        color: #777;
+        border-bottom: 1px solid #e5e5e5;
+      }
+
+      .btn-default {
+        background-color: #A9D6FF;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <img src="img/mdfm-logo-scaled.jpg" class="img-responsive img-rounded" alt="Million Dollar Foot Massage">
+      <div class="jumbotron">
+        <h2>A foot massage that is a whole body experience</h2>
+        <p class="lead">
+          Are you on your feet all day?
+          <br/>
+          Wearing shoes or boots that don't fit or hurt?
+          <br/>
+          Or just in need of some TLC?
+        </p>
+        <p>
+          <a class="btn btn-lg btn-primary" href="http://www.ezybook.co.nz/pages/hukanuibodytherapies/">Book your massage with Mary now</a>
+        </p>
+      </div>
+      <div id="">
+      <p>
+      Million Dollar Foot Massage&trade; uses deeply healing essential oils and lotions, a sea salt 
+      scrub and hot towels, and will leave you feeling relaxed yet invigorated, sending you into a 
+      heavenly state of relaxation - like a million dollars - rested, refreshed and rejuvenated!
+      </p>
+      <p>
+      Best of all:
+      </p>
+      <ul>
+        <li>It won't mess up your hair</li>
+        <li>You won't have to get undressed</li>
+        <li>It can reduce pain in feet and lower legs</li>
+        <li>It improves circulation and promotes relaxation</li>
+      </ul>
+      <p>
+      Let your body, mind and spirit unwind as Mary pampers your feet in a rhythmic,
+      choreographed fashion incorporating stretches and massage techniques, leaving your feet 
+      (and you!) feeling like a million dollars.
+      </p>
+	  <blockquote>
+	  <p>
+	  I absolutely recommend the Million Dollar Foot Massage for anyone wanting a luxurious and relaxing treat. I always enjoy my massage and feel completely refreshed afterwards. It really is a great way to unwind and treat not only your feet, but your whole body!
+	  </p>
+	  <small>Maire P.</small>
+      </blockquote>
+	  <blockquote>
+		  <p>
+		  I just loved the "Million Dollar" relaxed feel of this massage. My feet regained their flexibility and movement. Wonderful for tired feet!
+		  </p>
+		  <small>Nicky K.</small>
+	  </blockquote>
+      </div>
+      <div class="row marketing footer">
+        <div class="col-lg-6">
+          <p><img src="img/therapist.mary.large.jpg" class="img-responsive img-rounded" alt="Mary Rogerson"></p>
+          <p><a class="btn btn-lg btn-default" href="mailto:milliondollarfootmassagenz@gmail.com?Subject=Million%20Dollar%20Foot%20Massage%20enquiry">Email me</a></p>
+		  <p><a class="btn btn-lg btn-default" href="http://www.hukanuibodytherapies.co.nz/optin.php">Sign up for the Hukanui Body<br/>Therapies monthly newsletter</a></p>
+          <h4>Prices</h4>
+          <p>30 minute Million Dollar Foot Massage&trade; - $45</p>
+          <p>60 minute Million Dollar Foot Massage&trade; - $70</p>
+          <p>75 minutes including foot soak - $85</p>
+        </div>
+        <div class="col-lg-6">
+          <h4>Meet Mary</h4>
+		  <p>I am a massage therapist with a Diploma in Therapeutic Massage, an APNT Massage and pregnancy diploma and I am a member of Massage New Zealand.  I have been practicing massage since 2005.</p>
+		  <p>I enjoy incorporating foot massage into my full body massage treatments as I believe that we don't appreciate our feet enough, hardly even noticing them until something goes wrong and they begin to hurt. When that happens the entire body is affected and you can feel tired and miserable.  I believe that relaxed feet can influence how (remove great) your whole body feels.</p>
+		  <p>I was excited to discover Million Dollar Foot Massage, a wonderful way to treat the feet and relax the whole body. With up to 60 minutes spent treating the feet and lower legs but benefitting the entire person, it really is a full body experience.</p>
+		  <p>I am proud to be a director of Hukanui Body Therapies Ltd - a team of dedicated professional natural health therapists, working together to provide you with the best possible personal care.</p>
+          <p><a class="btn btn-lg btn-default" href="http://www.hukanuibodytherapies.co.nz/therapist.mary.php">More about me</a></p>
+          <p><a class="btn btn-lg btn-default" href="http://www.hukanuibodytherapies.co.nz/">Hukanui Body Therapies</a></p>
+        </div>
+
+      </div>
+      <div class="cntr">
+        <h4>
+        Indulge yourself with a Million Dollar Foot Massage&trade;
+        <br/>
+        Or, for even more luxury, add a delightful foot soak and a neck and shoulder massage.
+        </h4>
+        <p><a class="btn btn-lg btn-primary" href="http://www.ezybook.co.nz/pages/hukanuibodytherapies/">Book your massage with Mary now</a></p>
+      </div>
+
+      <div class="footer">
+        <p>&copy; Mary Rogerson 2013</p>
+        <p>Site built by <a href="http://kampj.es">Andrew Kampjes</a></p>
+      </div>
+
+
+    </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<!--<script src="//code.jquery.com/jquery.js"></script> -->
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+	<!-- <script src="js/bootstrap.min.js"></script> -->
+  </body>
+</html>
